refactor: transform site into portfolio with initial sections
- Update header and title to portfolio focus
- Add About Me, Skills, and Current Work sections
- Reorganize project structure into src directory
- Separate CSS and JS into dedicated folders
- Update README with new project structure

--- a/src/index.html
+++ b/src/index.html
@@ -4,42 +4,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sui Network Projects</title>
+    <title>OKORI's Portfolio</title>
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 
 <body>
     <header>
         <div class="container">
-            <h1>Sui Network Projects</h1>
-            <p class="subtitle">Explore the innovative projects shaping the future of the Sui ecosystem</p>
+            <h1>Okori's Portfolio</h1>
+            <p class="subtitle">Blockchain Developer & Software Engineer</p>
         </div>
     </header>
 
     <main class="container">
         <div class="projects">
-            <a href="https://sui.io/" class="project-card">
-                <h3>Sui Official Website</h3>
-                <p>The gateway to the Sui Network - featuring comprehensive documentation, developer resources, and ecosystem
-                    updates.</p>
-            </a>
+            <div class="project-card">
+                <h3>About Me</h3>
+                <p>I'm a passionate blockchain developer specializing in Sui Network development. With a strong foundation in
+                    software engineering, I create secure and efficient decentralized solutions.</p>
+            </div>
 
-            <a href="https://explorer.sui.io/" class="project-card">
-                <h3>Sui Explorer</h3>
-                <p>A powerful blockchain explorer for Sui, enabling real-time tracking of transactions, addresses, and network
-                    activity.</p>
-            </a>
+            <div class="project-card">
+                <h3>Skills</h3>
+                <p>• Blockchain Development (Sui, Move)<br>
+                   • Smart Contract Development<br>
+                   • Full Stack Web Development<br>
+                   • DApp Architecture & Design</p>
+            </div>
 
-            <a href="https://www.walrus.xyz/" class="project-card">
-                <h3>Walrus</h3>
-                <p>A revolutionary decentralized data storage network built on Sui, providing secure and efficient data
-                    management solutions.</p>
-            </a>
+            <div class="project-card">
+                <h3>Currently Working On</h3>
+                <p>Building decentralized applications on the Sui Network, focusing on data storage solutions and DeFi
+                    protocols.</p>
+            </div>
         </div>
 
         <div class="disclaimer">
-            <strong>⚠️ Disclaimer:</strong> Always conduct thorough research before engaging with any cryptocurrency project.
-            This curated list serves informational purposes only and should not be considered as financial advice.
+            <strong>✨ Note:</strong> This portfolio is constantly evolving as I take on new projects and expand my
+            expertise in the blockchain space.
         </div>
 
         <footer>
