update: change header title to full name
- Update page title to 'Deogratius Okori Ongom'
- Change header heading to full name

--- a/src/index.html
+++ b/src/index.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>OKORI's Portfolio</title>
+    <title>Deogratius Okori Ongom</title>
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 
 <body>
     <header>
         <div class="container">
-            <h1>Okori's Portfolio</h1>
+            <h1>Deogratius Okori Ongom</h1>
             <p class="subtitle">Blockchain Developer & Software Engineer</p>
         </div>
     </header>
@@ -20,16 +20,19 @@
         <div class="projects">
             <div class="project-card">
                 <h3>About Me</h3>
-                <p>I'm a passionate blockchain developer specializing in Sui Network development. With a strong foundation in
+                <p>I'm a passionate blockchain developer specializing in Sui Network development. With a strong
+                    foundation in
                     software engineering, I create secure and efficient decentralized solutions.</p>
             </div>
 
             <div class="project-card">
                 <h3>Skills</h3>
-                <p>• Blockchain Development (Sui, Move)<br>
-                   • Smart Contract Development<br>
-                   • Full Stack Web Development<br>
-                   • DApp Architecture & Design</p>
+                <ul>
+                    <li>Blockchain Development (Sui, Move)</li>
+                    <li>Smart Contract Development</li>
+                    <li>Full Stack Web Development</li>
+                    <li>DApp Architecture & Design</li>
+                </ul>
             </div>
 
             <div class="project-card">
