feat: enhance portfolio with detailed content and styling

--- a/src/index.html
+++ b/src/index.html
@@ -12,39 +12,121 @@
     <header>
         <div class="container">
             <h1>Deogratius Okori Ongom</h1>
-            <p class="subtitle">Blockchain Developer & Software Engineer</p>
+            <p class="subtitle">Computer Scientist & Software Engineer</p>
+            <div class="contact-info">
+                <p>📍 Kwetu Homes - Naalya, Kampala</p>
+                <p>📧 <a href="mailto:okoride0@gmail.com">okoride0@gmail.com</a></p>
+                <p>📱 +256 780258745</p>
+            </div>
         </div>
     </header>
 
     <main class="container">
         <div class="projects">
             <div class="project-card">
-                <h3>About Me</h3>
-                <p>I'm a passionate blockchain developer specializing in Sui Network development. With a strong
-                    foundation in
-                    software engineering, I create secure and efficient decentralized solutions.</p>
+                <h3>Profile</h3>
+                <p>Passionate and driven Computer Scientist with hands-on experience in building automated trading solutions and deep interest in blockchain technologies. Proficient in backend development, crypto protocols, and market-making strategies with the aim of contributing to innovative and impactful projects within the decentralized finance (DeFi) space.</p>
             </div>
 
             <div class="project-card">
-                <h3>Skills</h3>
+                <h3>Experience</h3>
+                <div class="experience-item">
+                    <h4>Ufahamu Labs</h4>
+                    <p class="role">Junior Software Developer | February 2024 - December 2024</p>
+                    <ul>
+                        <li>Wrote the main codebase for the connector using Drift's SDK for Solana integration</li>
+                        <li>Ensured connector adherence to Hummingbot's Gateway API specifications</li>
+                        <li>Implemented wallet management, transaction signing, and on-chain interactions</li>
+                        <li>Built and tested API endpoints for the connector</li>
+                        <li>Used VS Code's debugging tools for TypeScript and Python issue tracing</li>
+                        <li>Wrote comprehensive unit tests for order placement and cancellation</li>
+                        <li>Employed Jest and Pytest frameworks for testing</li>
+                        <li>Performed API testing with Postman and manual validation</li>
+                        <li>Created detailed documentation for setup and configuration</li>
+                        <li>Containerized solutions using Docker for easy deployment</li>
+                        <li>Implemented error handling for blockchain interactions and edge cases</li>
+                        <li>Developed extensible trade execution strategies</li>
+                        <li>Added HTTP requests for Drift-specific features like subaccount selection</li>
+                    </ul>
+                </div>
+                <div class="experience-item">
+                    <h4>Ufahamu Labs</h4>
+                    <p class="role">Researcher and Database Manager (Part-time) | July 2021 - January 2022</p>
+                    <ul>
+                        <li>Tracked Solana ecosystem developments across X, Discord, CoinGecko, and other platforms</li>
+                        <li>Identified and monitored new and upcoming Solana projects</li>
+                        <li>Collected comprehensive project data including tokenomics, technology stacks, and funding</li>
+                        <li>Established data categorization system for consistency</li>
+                        <li>Maintained database accuracy through cross-referencing multiple sources</li>
+                        <li>Conducted comparative analysis of projects based on technologies, security audits, and user engagement</li>
+                        <li>Analyzed Solana projects in relation to similar ones on other chains</li>
+                        <li>Regularly updated and maintained database accuracy</li>
+                        <li>Created customized data views using Notion's tools</li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="project-card">
+                <h3>Education</h3>
+                <div class="education-item">
+                    <h4>Makerere University, Kampala</h4>
+                    <p class="role">Bachelor of Science in Computer Science | 2020-2023</p>
+                    <p>Relevant Course Units:</p>
+                    <ul>
+                        <li>Object Oriented Programming with Java</li>
+                        <li>Structured Programming with C</li>
+                        <li>Data Structures and Algorithms</li>
+                        <li>Calculus 1</li>
+                        <li>Numerical Analysis 1</li>
+                        <li>Data Warehousing and Business Intelligence</li>
+                        <li>Data and Information Management 1</li>
+                        <li>Artificial Intelligence</li>
+                        <li>Computer Organization and Architecture</li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="project-card">
+                <h3>Technical Skills</h3>
                 <ul>
-                    <li>Blockchain Development (Sui, Move)</li>
-                    <li>Smart Contract Development</li>
-                    <li>Full Stack Web Development</li>
-                    <li>DApp Architecture & Design</li>
+                    <li>Languages: Python, TypeScript, Java, C, JavaScript</li>
+                    <li>Technologies: Jest, Pytest, Pandas, NumPy, Git</li>
+                    <li>Frameworks: Flask, Node.js, Bootstrap</li>
+                    <li>Tools: Selenium, Postman, MongoDB, Heroku, Docker</li>
+                    <li>Data Science: Matplotlib, Darts, Data Analysis</li>
                 </ul>
             </div>
 
             <div class="project-card">
-                <h3>Currently Working On</h3>
-                <p>Building decentralized applications on the Sui Network, focusing on data storage solutions and DeFi
-                    protocols.</p>
+                <h3>Notable Projects</h3>
+                <div class="experience-item">
+                    <h4>Hummingbot Gateway Drift Connector</h4>
+                    <p class="role">Ufahamu Labs, 2024</p>
+                    <ul>
+                        <li>Built a Hummingbot Gateway connector using TypeScript with backend logic for Drift exchange integration</li>
+                        <li>Conducted unit tests on Gateway's backend using Jest framework</li>
+                        <li>Implemented Python strategies on Hummingbot client with Gateway API communication</li>
+                        <li>Performed unit testing on strategies and scripts using Pytest</li>
+                        <li>Added custom HTTP requests for Drift-specific requirements</li>
+                        <li>Packaged software for cross-device deployment using Docker</li>
+                    </ul>
+                </div>
+                <div class="experience-item">
+                    <h4>Unicart</h4>
+                    <p class="role">Computer Science Project, 2023</p>
+                    <ul>
+                        <li>Led development of a web app for bridging information gaps in Uganda's gadget market</li>
+                        <li>Researched consumer trends in Kampala's phone market</li>
+                        <li>Implemented web scraping using Selenium to collect data from Jumia and Jiji</li>
+                        <li>Built and deployed Flask API on Heroku with MongoDB integration</li>
+                        <li>Developed frontend using JavaScript and Bootstrap framework</li>
+                    </ul>
+                </div>
             </div>
         </div>
 
         <div class="disclaimer">
-            <strong>✨ Note:</strong> This portfolio is constantly evolving as I take on new projects and expand my
-            expertise in the blockchain space.
+            <strong>✨ Note:</strong> View my complete profile and projects on <a href="https://github.com/okori-d">GitHub</a>
         </div>
 
         <footer>
