refactor: add a better styled contact card

--- a/src/index.html
+++ b/src/index.html
@@ -13,11 +13,6 @@
         <div class="container">
             <h1>Deogratius Okori Ongom</h1>
             <p class="subtitle">Computer Scientist & Software Engineer</p>
-            <div class="contact-info">
-                <p>📍 Kwetu Homes - Naalya, Kampala</p>
-                <p>📧 <a href="mailto:okoride0@gmail.com">okoride0@gmail.com</a></p>
-                <p>📱 +256 780258745</p>
-            </div>
         </div>
     </header>
 
@@ -125,12 +120,18 @@
             </div>
         </div>
 
-        <div class="disclaimer">
-            <strong>✨ Note:</strong> View my complete profile and projects on <a href="https://github.com/okori-d">GitHub</a>
+        <div class="contact-section">
+            <h3>Get in Touch</h3>
+            <p>I'm always interested in discussing new opportunities, blockchain technologies, and innovative projects.</p>
+            <div class="contact-info">
+                <p>📧 <a href="mailto:okoride0@gmail.com">okoride0@gmail.com</a></p>
+                <p>📱 <a href="tel:+256780258745">+256 780258745</a></p>
+                <p>💻 <a href="https://github.com/okori-d">GitHub</a></p>
+            </div>
         </div>
 
         <footer>
-            Crafted and Maintained by <a href="https://github.com/okori-d">OKORI</a>
+            Crafted with ⚡ by <a href="https://github.com/okori-d">OKORI</a>
         </footer>
     </main>
 
